GetTask/GetTasksTodoMicroservice/manifests-sri/get-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gettask-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: amazon
  template:
    metadata:
      labels:
        app: amazon
    spec:
      containers:
      - name: amazon-get
        image: acr1612.azurecr.io/gettask:latest
        ports:
        - containerPort: 8000
