GetTask/GetTasksTodoMicroservice/manifests-sri/get-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amazon-get-svc
spec:
  selector:
    app: amazon
  ports:
  - port: 80
    targetPort: 8000
