GetTask/GetTasksTodoMicroservice/manifests-sri/get-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: get-ingress
  labels:
    app: amazon
spec:
  IngressClassName: azure-application-gateway 
  rules:
  - host: get.srijansharma.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: amazon-get-svc
            port: 
              number: 80
